# agentic-rag-paper-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENCE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
agent/: agent.py  agent_langchain.py  agent_langgraph.py  agent_runner.py  agent_runtime.py  api.py  app_config.py  cache_utils.py  db_utils.py  ingestion_jobs.py  ingestion_tasks_db.py  ingestion_worker.py  intent_planner.py  langchain_tools.py  memory_utils.py  models.py  openalex_router.py  planner_runtime.py  prompts.py  providers.py  rabbitmq_producer.py  routing.py  sse_utils.py  stream_registry.py  tool_payloads.py  tool_specs.py  tools.py  warning_text.py
common/: display_utils.py  encoding_utils.py  title_aliases.py
dev_checks/: __init__.py  check_agent_backend_switch.py  check_agent_runner.py  check_agent_runtime.py  check_chat_default_langchain_api.py  check_chat_langchain_api.py  check_chat_metadata_contract.py  check_chat_pydantic_ai_explicit_api.py  check_chat_sources.py  check_chat_stream_contract.py  check_chat_stream_langchain_optional.py  check_chat_stream_still_works.py  check_chat_use_react_langgraph.py  check_common_package.py  check_debug_intent_planner.py  check_default_backend_langchain.py  check_format_instruction.py  check_format_instruction_no_table.py  check_history_message_clean.py  check_langchain_agent.py  check_langchain_streaming_agent.py  check_langchain_tools.py  check_langgraph_workflow.py  check_llm_stream_timeout_config.py  check_local_compare_query.py  check_retry_message.py  (+21 more)
(+77 files in other folders)
